src/app/pages/contact/contact.scss
@import 'variables';
@import 'mixins';

@mixin tablet-up {
    @media (min-width: #{breakpoints(phone) + 1}) {
        @content;
    }
}

.contact-page {
    background-color: rgba(color(neutral-lighter), 0.2);

    .subhead {
        padding: 0;
    }

    .hero {
        background-color: color(green);
        color: color(neutral-lightest);
        padding: 6rem 1.5rem;

        h1 {
            color: inherit;
        }

        .boxed {
            padding: 0 1.5rem;
            flex-flow: column nowrap;
        }
    }

    .boxed {
        padding: 4rem 1.5rem  0;

        @include tablet-up {
            flex-flow: row wrap;
        }

        .col {
            padding-bottom: 4rem;

            @include tablet-up {
                flex: 1 1 60%;
            }

            &:last-child {
                @include tablet-up {
                    padding-left: 3rem;
                    flex: 1 1 40%;
                }

            }
        }
    }

    form {
        color: color(blue);

        textarea {
            resize: none;
            height: auto;
        }
    }

    .btn {
        float: none;
        background-color: color(orange);
    }

    .btn:hover,
    .btn:focus {
        background-color: darken(color(orange), 5%);
    }

    .labeled-control {
        margin-bottom: 2rem;
    }

    address {
        line-height: normal;

        span {
            display: block;
        }
    }

    .phone span {
        font-weight: 500;
    }
}

